[package]
name = "websocket"
version = "0.1.0"
authors = ["zhihelive <xzhihe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.2"
futures = "0.3.1"
serde = "1.0.110"
serde_json = "1.0.53"
